Add Theme {White,Dark} mode

--- a/erp-system-v2/src/Components/sidebar/sidebar.scss
+++ b/erp-system-v2/src/Components/sidebar/sidebar.scss
@@ -56,7 +56,7 @@
           span{
               font-size: 13px;
               font-weight: 600;
-              color: rgb(70, 66, 66);
+              color: black;
               margin-left: 10px;
           }
         }
