add chart in prodoct

--- a/erp-system-v2/src/style/dark.scss
+++ b/erp-system-v2/src/style/dark.scss
@@ -1,5 +1,5 @@
 .app.dark {
-    background-color: rgb(7, 7, 7);
+    background-color:rgb(14, 14, 14);
     color: rgb(255, 251, 251);
   
     .chartGrid {
@@ -54,7 +54,7 @@
       {
         .title
         {
-            color: rgb(91, 91, 91);
+            color: rgb(255, 255, 255);
         }
       }
     }
@@ -71,10 +71,42 @@
           border: none;
         }
       }
+      .cellAction {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+  
+      .viewButton {
+        padding: 2px 5px;
+        border-radius: 5px;
+        color: darkblue;
+        border: 1px dotted rgba(0, 0, 139, 0.596);
+        cursor: pointer;
+      }
+      
+      .deleteButton {
+        padding: 2px 5px;
+        border-radius: 5px;
+        color: crimson;
+        border: 1px dotted rgba(220, 20, 60, 0.6);
+        cursor: pointer;
+      }
+      .userListEdit{
+        border: none;
+        border-radius: 10px;
+        padding: 5px 10px;
+        background-color: #3bb077;
+        color: white;
+        cursor: pointer;
+        margin-right: 20px;
+    }
+    
+    }
     }
   
     input{
         background-color: transparent;
     }
+   
   }
   
